--- a/trivias-fragment/app/src/main/res/values/strings.xml
+++ b/trivias-fragment/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="welcome_title">Bienvenido al logo de trivia</string>
     <string name="comenzar">Comenzar</string>
     <string name="trivia_title">Esto es una trivia</string>
+    <string name="ingrese_nombre">Ingrese Nombre:</string>
 </resources>
