--- a/Consumos/app/src/main/res/values/strings.xml
+++ b/Consumos/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="cantidad">Cantidad</string>
     <string name="total_actual">Total Actual</string>
     <string name="guardar">Guardar</string>
+    <string name="nuevo_registro">Nuevo Registro</string>
 </resources>
